--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emoji-mart/data": "^1.1.1",
+    "@emoji-mart/react": "^1.1.1",
     "@supabase/supabase-js": "^2.44.4",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@emoji-mart/react": "^1.1.1",
-    "@emoji-mart/data": "^1.1.1"
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
